Fix doc for sincpi

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -312,8 +312,8 @@ OK signnz.hpp
 OK sinc.hpp
 OK sincosd.hpp
 OK sincos.hpp
-sincospi.hpp
-sincpi.hpp
+OK sincospi.hpp
+OK sincpi.hpp
 sind.hpp
 sinhc.hpp
 sinhcosh.hpp
