Fix doc for splatted

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -326,7 +326,7 @@ OK slice_low.hpp
 NA slide.hpp
 OK sort.hpp
 NA splat.hpp
-splatted.hpp
+NA splatted.hpp
 split_high.hpp
 split.hpp
 split_low.hpp
