Fix doc for spllit_high

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -327,7 +327,7 @@ NA slide.hpp
 OK sort.hpp
 NA splat.hpp
 NA splatted.hpp
-split_high.hpp
+NA split_high.hpp
 split.hpp
 split_low.hpp
 split_multiplies.hpp
