Fix doc for split

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -328,7 +328,7 @@ OK sort.hpp
 NA splat.hpp
 NA splatted.hpp
 NA split_high.hpp
-split.hpp
+NA split.hpp
 split_low.hpp
 split_multiplies.hpp
 sqr_abs.hpp
