--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -329,7 +329,7 @@ NA splat.hpp
 NA splatted.hpp
 NA split_high.hpp
 NA split.hpp
-split_low.hpp
+NA split_low.hpp
 split_multiplies.hpp
 sqr_abs.hpp
 sqr.hpp
