Fix doc for split_multiplies

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -330,7 +330,7 @@ NA splatted.hpp
 NA split_high.hpp
 NA split.hpp
 NA split_low.hpp
-OK split_multiplies.hpp
+NA split_multiplies.hpp
 sqr_abs.hpp
 sqr.hpp
 sqrt1pm1.hpp
