Fix doc for tofloat

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -346,8 +346,8 @@ OK tand.hpp
 OK tanh.hpp
 OK tan.hpp
 OK tanpi.hpp
-tenpower.hpp
-tofloat.hpp
+OK tenpower.hpp
+OK tofloat.hpp
 toint.hpp
 touint.hpp
 trunc.hpp
