--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -355,7 +355,7 @@ OK two_add.hpp
 OK twopower.hpp
 OK two_prod.hpp
 OK two_split.hpp
-ulpdist.hpp
+OK ulpdist.hpp
 ulp.hpp
 unary_minus.hpp
 unary_plus.hpp
